--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,85 @@
 *.csv
 
 *.png
+
+\.pytest_cache/v/cache/nodeids
+
+\.pytest_cache/v/cache/stepwise
+
+\.vscode/c_cpp_properties\.json
+
+\.vscode/ipch/14eb2af91aa1869a/fxos8700\.ipch
+
+\.vscode/ipch/14eb2af91aa1869a/mmap_address\.bin
+
+\.vscode/ipch/19e5addf0dc16860/mmap_address\.bin
+
+\.vscode/ipch/19e5addf0dc16860/obj_io\.ipch
+
+\.vscode/ipch/23f0f5d96b329763/converter\.ipch
+
+\.vscode/ipch/23f0f5d96b329763/mmap_address\.bin
+
+\.vscode/ipch/25ab0bd0812e4639/fxos8700\.ipch
+
+\.vscode/ipch/25ab0bd0812e4639/mmap_address\.bin
+
+\.vscode/ipch/51a8ab3120331339/mmap_address\.bin
+
+\.vscode/ipch/51a8ab3120331339/parse\.ipch
+
+\.vscode/ipch/7931fd5536409c87/mmap_address\.bin
+
+\.vscode/ipch/7931fd5536409c87/test_mesh_conversion\.ipch
+
+\.vscode/ipch/7a49320d28a85a4a/auto_io\.ipch
+
+\.vscode/ipch/7a49320d28a85a4a/mmap_address\.bin
+
+\.vscode/ipch/7ed0a21d4978962d/fxos8700iio-1\.ipch
+
+\.vscode/ipch/7ed0a21d4978962d/mmap_address\.bin
+
+\.vscode/ipch/842709bdc7c1887e/mmap_address\.bin
+
+\.vscode/ipch/87f679b0aa63914d/conversions\.ipch
+
+\.vscode/ipch/87f679b0aa63914d/mmap_address\.bin
+
+\.vscode/ipch/8c20cf0399be8a7c/auto_io\.ipch
+
+\.vscode/ipch/8c20cf0399be8a7c/mmap_address\.bin
+
+\.vscode/ipch/9a73468a4456bb12/mmap_address\.bin
+
+\.vscode/ipch/bf401033a7edfc65/mmap_address\.bin
+
+\.vscode/ipch/bf401033a7edfc65/parse\.ipch
+
+\.vscode/ipch/e3148b66ca32a1f3/fxos8700iio\.ipch
+
+\.vscode/ipch/e3148b66ca32a1f3/mmap_address\.bin
+
+\.vscode/ipch/e449312b06fcb413/dummy_platform\.ipch
+
+\.vscode/ipch/e449312b06fcb413/mmap_address\.bin
+
+\.vscode/ipch/ee58d16a1aeaffc1/mmap_address\.bin
+
+\.vscode/ipch/ee58d16a1aeaffc1/opal_config_bottom\.ipch
+
+\.vscode/ipch/f1a01ead3959322e/mmap_address\.bin
+
+\.vscode/ipch/f1a01ead3959322e/plyheader\.ipch
+
+\.vscode/ipch/fa3b9e7658a9f568/mmap_address\.bin
+
+\.vscode/launch\.json
+
+\.vscode/settings\.json
+
+*.pcd
+
+Scanner_3D/\.vscode/launch\.json
+
+Scanner_3D/\.vscode/settings\.json
