--- a/.gitignore
+++ b/.gitignore
@@ -108,3 +108,17 @@ Scanner_3D/\.vscode/settings\.json
 \.vscode/ipch/f463b7173b86375e/main\.ipch
 
 \.vscode/ipch/f463b7173b86375e/mmap_address\.bin
+
+\.vscode/ipch/157c5d03221ce900/mmap_address\.bin
+
+\.vscode/ipch/157c5d03221ce900/stm32f4xx_hal_msp\.ipch
+
+\.vscode/ipch/449fc4b8d05c71ee/mmap_address\.bin
+
+\.vscode/ipch/bb66ede813c0608e/configuration\.ipch
+
+\.vscode/ipch/bb66ede813c0608e/mmap_address\.bin
+
+\.vscode/ipch/ff3ad105932d2ab7/main\.ipch
+
+\.vscode/ipch/ff3ad105932d2ab7/mmap_address\.bin
