--- a/.gitignore
+++ b/.gitignore
@@ -126,3 +126,7 @@ Scanner_3D/\.vscode/settings\.json
 *.ipch
 
 Scanner_3D/\.vscode/ipch/57e89511f6944f0f/mmap_address\.bin
+
+Scanner_3D/\.vscode/ipch/967c9dc011783bf0/mmap_address\.bin
+
+Scanner_3D/\.vscode/ipch/bfce695abc2ce40d/mmap_address\.bin
